; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/extr_soc-core.c_snd_soc_cnew.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/extr_soc-core.c_snd_soc_cnew.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_kcontrol = type { i32 }
%struct.snd_kcontrol_new = type { i8*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.snd_kcontrol* @snd_soc_cnew(%struct.snd_kcontrol_new* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.snd_kcontrol_new*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.snd_kcontrol_new, align 8
  store %struct.snd_kcontrol_new* %0, %struct.snd_kcontrol_new** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.snd_kcontrol_new*, %struct.snd_kcontrol_new** %4, align 8
  %9 = call i32 @memcpy(%struct.snd_kcontrol_new* %7, %struct.snd_kcontrol_new* %8, i32 16)
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = getelementptr inbounds %struct.snd_kcontrol_new, %struct.snd_kcontrol_new* %7, i32 0, i32 0
  store i8* %13, i8** %14, align 8
  br label %15

15:                                               ; preds = %12, %3
  %16 = getelementptr inbounds %struct.snd_kcontrol_new, %struct.snd_kcontrol_new* %7, i32 0, i32 1
  store i64 0, i64* %16, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call %struct.snd_kcontrol* @snd_ctl_new1(%struct.snd_kcontrol_new* %7, i8* %17)
  ret %struct.snd_kcontrol* %18
}

declare dso_local i32 @memcpy(%struct.snd_kcontrol_new*, %struct.snd_kcontrol_new*, i32) #1

declare dso_local %struct.snd_kcontrol* @snd_ctl_new1(%struct.snd_kcontrol_new*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
